add keyhole images fix

--- a/games/lock_picker.html
+++ b/games/lock_picker.html
@@ -779,7 +779,7 @@
             isSpecialDay = true;
         }
 
-        if (true||isSameDay(today, new Date("2 Apr 2021")) ||
+        if (isSameDay(today, new Date("2 Apr 2021")) ||
             isSameDay(today, new Date("3 Apr 2021")) ||
             isSameDay(today, new Date("4 Apr 2021")) ||
             isSameDay(today, new Date("5 Apr 2021")) ) {
