--- a/games/lock_picker.html
+++ b/games/lock_picker.html
@@ -790,7 +790,7 @@
             pos_keyhole= {x: 250, y:200};
             isSpecialDay = true;
         }
-        if (true||isSameDay(today, new Date("28 Oct 2021")) ||
+        if (isSameDay(today, new Date("28 Oct 2021")) ||
             isSameDay(today, new Date("29 Oct 2021")) ||
             isSameDay(today, new Date("30 Oct 2021")) ||
             isSameDay(today, new Date("31 Oct 2021")) ||
